# GlassBox-AutoML-Agent

./: .env  .gitignore  .python-version  AGENTS.md  Cargo.toml  MEMORY.md  README.md  SKILL.md  TOOLS.md  autofit.capabilities.json  autofit.py  autofit_tool.py  build_wasm.py  glassbox_mcp_server.py  index.html  linear_regression.md  main.py  n  pyproject.toml  server.py  skill.md  test.csv  test_agent.js  tool_definition.json
Data_test/: sample.csv
Models_Zoo/: KNN.py
Orchestrator/: GridSearch.py  HyperParameterSearch.py  KFoldCV.py  Orchestrator.py  RandomSearch.py  model_selector.py  search_spaces.py
Skills/: run_autofit.py
cleaner/: label_encoder.py  minMax_Scaler.py  oneHotEncoder.py  preprocessing_pipeline.py  simple_imputer.py  standard_Scaler.py
config/: tools.json
data/: Student_Performance 2.csv  data_test.csv  titanic.csv
docs/: Orchestrator_&_KNNmodel.md  linear_regression.md  naive_bayes.md
eda/: association.py  auto-typing.py  auto_typing.py  iqr.py  report_builder.py  statistics.py
evaluation/: confusion.py  evaluator.py  explainability.py  metrics_classification.py  metrics_regression.py  report_formatter.py  roc_auc.py
iron_claw_agent/: demo_request.json  run_autofit_cli.py  schemas.py  tool_autofit.py
ironclaw-wrapper/: Cargo.toml
ironclaw_integration/: SKILL.md  __init__.py  autofit.py  csv_utils.py  json_utils.py  mcp_server.py  tool_api.py  tool_cli.py
models/: KNN.py  base_model.py  decision_tree.py  linear_regression.py  logistic_regression.py  model_registry.py  naive_bayes.py  random_forest.py
src/: lib.rs
(+19 files in other folders)
