[package]
name = "glassbox_ironclaw_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # Indispensable pour compiler en WASM

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# web-sys permet à Rust de parler au navigateur (Fetch API)
web-sys = { version = "0.3", features = [
    "Request", 
    "RequestInit", 
    "RequestMode", 
    "Response", 
    "Window",
    "Headers"
]}